<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="submit">submit</string>
    <string name="username_input_hint">Please enter your username</string>
    <string name="password">Password</string>
    <string name="password_input_hint">Please enter your password</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_input_hint">Please confirm your password</string>
</resources>
