<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/username" />

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:hint="@string/username_input_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/password_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:hint="@string/password_input_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confirm_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/confirm" />

            <EditText
                android:id="@+id/confirm_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:hint="@string/confirm_input_hint" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/fields"
        android:layout_below="@+id/fields"
        android:text="@string/submit" />


</RelativeLayout>
